--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
     "next": "latest",
     "postcss": "8.4.24",
     "react": "18.2.0",
+    "react-avatar": "^5.0.3",
     "react-dom": "18.2.0",
+    "react-easy-crop": "^5.0.0",
     "react-icons": "^4.10.1",
+    "react-image-file-resizer": "^0.4.8",
+    "react-password-strength-bar": "^0.4.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3",
     "zustand": "^4.3.9"
@@ -22,7 +26,7 @@
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
-    "daisyui": "^3.3.1",
+    "daisyui": "^3.4.0",
     "encoding": "^0.1.13"
   }
 }
