--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@supabase/auth-helpers-nextjs": "latest",
     "@supabase/supabase-js": "latest",
     "autoprefixer": "10.4.14",
+    "date-fns": "^2.30.0",
+    "date-fns-tz": "^2.0.0",
     "next": "latest",
     "postcss": "8.4.24",
     "react": "18.2.0",
