--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@supabase/auth-helpers-nextjs": "latest",
     "@supabase/supabase-js": "latest",
+    "@vercel/analytics": "^1.0.1",
     "autoprefixer": "10.4.14",
     "date-fns": "^2.30.0",
     "date-fns-tz": "^2.0.0",
