--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "autoprefixer": "10.4.14",
     "date-fns": "^2.30.0",
     "date-fns-tz": "^2.0.0",
+    "moment": "^2.29.4",
+    "moment-timezone": "^0.5.43",
     "next": "latest",
     "postcss": "8.4.24",
     "react": "18.2.0",
